--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
     <link rel="stylesheet" href="styles/index.css" type="text/css" />
   </head>
   <body>
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
+    <div id="qr-code-container">
+      <img src="images/image-qr-code.png" alt="qr-code" />
+      <p class="outfit-bold-text">
+        Improve your front-end skills by building projects
+      </p>
+      <p class="outfit-regular-text">
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
 
     <div class="attribution">
       Challenge by
