--- a/index.html
+++ b/index.html
@@ -38,22 +38,23 @@
     <link rel="stylesheet" href="styles/index.css" type="text/css" />
   </head>
   <body>
-    <div id="qr-code-container">
-      <img src="images/image-qr-code.png" alt="qr-code" />
-      <p class="outfit-bold-text">
-        Improve your front-end skills by building projects
-      </p>
-      <p class="outfit-regular-text">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <main role="main">
+      <div id="qr-code-container">
+        <img src="images/image-qr-code.png" alt="qr-code" />
+        <h1 class="outfit-bold-text">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="outfit-regular-text">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </main>
   </body>
 </html>
