--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body>
     <main role="main">
-      <div id="qr-code-container">
+      <div class="qr-code-container">
         <img src="images/image-qr-code.png" alt="qr-code" />
         <h1 class="outfit-bold-text">
           Improve your front-end skills by building projects
