--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:image" content="./screenshots/qr-code.png" />
+    <meta property="og:title" content="QR Code Card" />
+    <meta
+      property="og:description"
+      content="An example QR code card. Based off a design file provided from Frontend Mentor."
+    />
+    <meta
+      property="og:url"
+      content="https://programjones.github.io/qr-code-component/"
+    />
     <!-- displays site properly based on user's device -->
 
     <link
