--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       property="og:url"
       content="https://programjones.github.io/qr-code-component/"
     />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <!-- displays site properly based on user's device -->
 
     <link
