Added an absolute url for the og:image tag.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:image" content="./screenshots/qr-code.png" />
+    <meta
+      property="og:image"
+      content="https://ucarecdn.com/b3b7faed-9df1-45a1-af79-9ab23cc6126a/-/preview/1000x523/"
+    />
     <meta property="og:title" content="QR Code Card" />
     <meta
       property="og:description"
