Added the og:type tag to index.html.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="https://ucarecdn.com/b3b7faed-9df1-45a1-af79-9ab23cc6126a/-/preview/1000x523/"
     />
     <meta property="og:title" content="QR Code Card" />
+    <meta property="og:type" content="website" />
     <meta
       property="og:description"
       content="An example QR code card. Based off a design file provided from Frontend Mentor."
