Restructured the css for scalability. Moved font face declaractions to index.css instead of html.css. Added comments for easy scanning. Added more and clearer variables to index.css.

--- a/index.html
+++ b/index.html
@@ -34,15 +34,6 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
-      @font-face {
-        font-family: outfit-regular;
-        src: url(fonts/Outfit-Regular.ttf);
-      }
-      @font-face {
-        font-family: outfit-bold;
-        src: url(fonts/Outfit-Bold.ttf);
-      }
-
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -59,10 +50,10 @@
     <main role="main">
       <div class="qr-code-container">
         <img src="images/image-qr-code.png" alt="qr-code" />
-        <h1 class="outfit-bold-text">
+        <h1 class="text-bold">
           Improve your front-end skills by building projects
         </h1>
-        <p class="outfit-regular-text">
+        <p class="text-regular">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
