--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Tai Jones</a>.
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/ProgramJones"
+          >Tai Jones</a
+        >.
       </div>
     </main>
   </body>
